# POSGO

./: .gitignore  CMakeLists.txt  Readme.md
app/: POSGO.cpp
conf/: rp_kpl_ekf.ini  rp_kpl_ekfd.ini  rp_kpl_go.ini  rp_kpl_gol.ini  rp_kpl_gold.ini  rp_p40_ekf.ini  rp_p40_go.ini  spp_kpl_go.ini  spp_kpl_gol.ini  spp_kpl_gold.ini  spp_kpl_lsq.ini  spp_kpl_lsqd.ini  spp_mate_go.ini  spp_mate_lsq.ini  spp_p40_go.ini  spp_p40_lsq.ini
data/Mate20/: GEOP266F.21o  ref.txt
data/kpl/: codg1650.22i  ref.txt
doc/: ~$SGO User Manual.docx
script/: Analyze.py  AnalyzeStatic.py  com.py  det.txt  dynamic.py  mytime.py  readfile.py
src/: Global.cpp  Global.h
src/CommonFunction/: CEarth.h  CMaths.h  CState.h  CString.h  CTimes.h  Parameter.h  Types.h
src/DataManagement/: CMakeLists.txt  ReadFile.cpp  ReadFile.h  ReadGnssData.cpp  ReadGnssData.h  ReadGnssProduct.cpp  ReadGnssProduct.h
src/MultiPosition/: CMakeLists.txt  MultiPosition.cpp  MultiPosition.h  RtkPosition.cpp  RtkPosition.h  SppPosition.cpp  SppPosition.h
src/OrbitClock/: CMakeLists.txt  NavOrbitClock.cpp  NavOrbitClock.h  OrbitClock.h
src/ResultExport/: CMakeLists.txt  ResultExport.h  WriteResultFile.cpp  WriteResultFile.h
src/SensorErrorModel/: CMakeLists.txt  GnssErrorModel.cpp  GnssErrorModel.h
src/Solver/: CMakeLists.txt  GraphOptimizeSolver.cpp  GraphOptimizeSolver.h  KalmanFilterSolver.cpp  KalmanFilterSolver.h  LeastSquareSolver.cpp  LeastSquareSolver.h  RtkGraphOptimize.cpp  RtkGraphOptimize.h  Solver.h  SppGraphOptimize.cpp  SppGraphOptimize.h
src/SystemSetting/: CMakeLists.txt  Configuration.cpp  Configuration.h  DebugInfo.cpp  DebugInfo.h  DebugLog.cpp  DebugLog.h
tables/: leap.sec
